# python-project-blueprint

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  Makefile  README.md  SECURITY.md  pyproject.toml
.agents/context/: architecture.md  project.md  python-style.md  review-checklist.md  testing.md
.agents/prompts/: bugfix.md  implementation.md  new-feature.md  plan-first.md  review-until-quality.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  improvement.md
.github/workflows/: ci.yml
docs/: agent-setup-notes.md
src/python_project_blueprint/: __init__.py
tests/: test_ci_configuration.py  test_smoke.py
